<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFCFCF"
    tools:context=".RegisterActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="5dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="5dp" />

    <ImageView
        android:id="@+id/register_imageView"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/newsloginactivity"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/register_imageView"
        app:layout_constraintStart_toStartOf="@+id/register_imageView"
        app:layout_constraintTop_toBottomOf="@+id/register_imageView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="#11000000"
            app:boxCornerRadiusBottomEnd="1dp"
            app:boxCornerRadiusBottomStart="1dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/Red"
            app:boxStrokeWidth="1.5dp"
            app:helperText="Please Enter Name"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/black"
            app:startIconDrawable="@drawable/user">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="@string/enter_name"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="#11000000"
            app:boxCornerRadiusBottomEnd="1dp"
            app:boxCornerRadiusBottomStart="1dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/Red"
            app:boxStrokeWidth="1.5dp"
            app:helperText="Please Enter Email"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/black"
            app:startIconDrawable="@drawable/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="@string/enter_email"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="#11000000"
            app:boxCornerRadiusBottomEnd="1dp"
            app:boxCornerRadiusBottomStart="1dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/Red"
            app:boxStrokeWidth="1.5dp"
            app:helperText="Please Enter Password"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:hint="@string/enter_password"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="108dp"
        android:text="@string/register"
        android:backgroundTint="#858585"
        app:cornerRadius="30dp"
        android:textColor="@color/white"
        android:fontFamily="@font/adamina"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>